--- a/package.json
+++ b/package.json
@@ -9,8 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.4.2",
+    "@hookform/resolvers": "^3.9.0",
     "@lucia-auth/adapter-prisma": "^4.0.1",
     "@prisma/client": "^5.19.0",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
+    "@radix-ui/react-tooltip": "^1.1.2",
     "@tanstack/react-query": "^5.53.1",
     "@tanstack/react-query-devtools": "^5.53.1",
     "@tiptap/extension-placeholder": "^2.6.6",
@@ -19,6 +28,7 @@
     "@tiptap/starter-kit": "^2.6.6",
     "@uploadthing/react": "^6.7.2",
     "arctic": "^1.9.2",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -26,19 +36,23 @@
     "lucia": "^3.2.0",
     "lucide-react": "^0.437.0",
     "next": "15.0.0-rc.0",
+    "next-auth": "^5.0.0-beta.20",
     "next-themes": "^0.3.0",
     "prisma": "^5.19.0",
     "react": "19.0.0-rc-f994737d14-20240522",
     "react-cropper": "^2.3.3",
     "react-dom": "19.0.0-rc-f994737d14-20240522",
+    "react-hook-form": "^7.53.0",
     "react-image-file-resizer": "^0.4.8",
     "react-intersection-observer": "^9.13.0",
     "react-linkify-it": "^1.0.8",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
-    "uploadthing": "^6.13.2"
+    "uploadthing": "^6.13.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
